--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         color: white;
         height: 20vw;
       }
-    h2 {
+    .footer h2 {
     position: relative;
     left: 40vw;
     padding-top: 3vw;
