making responsive time line

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       .footer{
         background-color: black;
         color: white;
-        height: 20vw;
+        height: 24vw;
       }
     .footer h2 {
     position: relative;
@@ -53,8 +53,9 @@ div .footercontent img:hover{
   #time {
     color: white;
     position: relative;
-    right: -63vw;
-    bottom: -4vw;
+    right: -42vw;
+    bottom: -6vw;
+    font-size: 2vw;
 }
     </style>
   </head>
@@ -323,6 +324,9 @@ div .footercontent img:hover{
 <div class="footercontent">follow on instagram :<a href="https://www.instagram.com/invites/contact/?i=1m2qaw2eudl1s&utm_content=284j26e"> <img src="insta.png" class="imge" height="4"></a></div>
 <div class="footercontent">follow my git account :<a href="https://github.com/chirag6398"> <img src="git.png" class="imge" height="4"></a></div>
 <div >
+
+
+  <!-- time -->
   <p id="time">
     
 
